package tvestergaard.fog.data.models;

public interface Model extends ModelUpdater
{

}
